Add support for Java 11 and 17 simultaneously using multi-release JAR
Fixes #212
Co-authored-by: gavlyukovskiy <agavlyukovskiy@gmail.com>